--- a/AndroidJava/app/src/main/res/layout/step_item.xml
+++ b/AndroidJava/app/src/main/res/layout/step_item.xml
@@ -8,8 +8,8 @@
     <androidx.cardview.widget.CardView
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        app:cardBackgroundColor="@color/white"
+        android:layout_margin="16dp"
+        app:cardBackgroundColor="@color/SoftPink"
         app:cardCornerRadius="12dp"
         app:cardElevation="4dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,15 +22,6 @@
 
             android:orientation="horizontal"
             android:padding="10dp">
-
-
-            <ImageView
-                android:id="@+id/ingredientImg"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_marginEnd="10dp"
-                android:contentDescription="imgOfItem"
-                app:srcCompat="@drawable/food" />
 
 
             <TextView
