--- a/AndroidJava/app/src/main/res/navigation/nav_graph.xml
+++ b/AndroidJava/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/home2"
-        android:name="com.example.androidjava.fragments.Home"
+        android:name="com.example.androidjava.home.views.Home"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" >
         <action
@@ -35,9 +35,6 @@
         <argument
             android:name="name"
             app:argType="string" />
-        <argument
-            android:name="mealObject"
-            app:argType="com.example.androidjava.Models.Meal" />
     </fragment>
     <fragment
         android:id="@+id/introduction"
