--- a/AndroidJava/app/src/main/res/layout/fragment_meals_list.xml
+++ b/AndroidJava/app/src/main/res/layout/fragment_meals_list.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.MealsList" >
+    tools:context=".mealsList.views.MealsList" >
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
