--- a/AndroidJava/app/src/main/res/layout/meal_cell.xml
+++ b/AndroidJava/app/src/main/res/layout/meal_cell.xml
@@ -2,8 +2,8 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card"
-    android:layout_width="170dp"
-    android:layout_height="170dp"
+    android:layout_width="190dp"
+    android:layout_height="190dp"
     android:layout_margin="8dp"
     app:cardBackgroundColor="@color/Green"
     app:cardCornerRadius="16dp"
@@ -31,11 +31,11 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="90dp"
+            android:layout_height="85dp"
             android:layout_alignParentBottom="true"
             android:alpha="0.92"
             android:background="@color/DarkGreen"
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:padding="16dp">
 
 
@@ -64,7 +64,6 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginEnd="10dp"
                     app:srcCompat="@drawable/notfav" />
 
             </RelativeLayout>
