--- a/AndroidJava/app/src/main/res/layout/fragment_meal_details.xml
+++ b/AndroidJava/app/src/main/res/layout/fragment_meal_details.xml
@@ -29,8 +29,7 @@
                 android:id="@+id/mealImage"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                android:src="@drawable/food" />
+                android:scaleType="centerCrop" />
         </androidx.cardview.widget.CardView>
 
 
