--- a/AndroidJava/app/src/main/res/layout/meal_cell.xml
+++ b/AndroidJava/app/src/main/res/layout/meal_cell.xml
@@ -25,8 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="?attr/colorSurfaceVariant"
-            android:scaleType="centerCrop"
-            android:src="@drawable/food" />
+            android:scaleType="centerCrop" />
 
 
         <LinearLayout
