--- a/AndroidJava/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/AndroidJava/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,21 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item
-     android:id="@+id/home"
-     android:title="@string/Home" />
+     android:id="@+id/homeFragment"
+     android:icon="@drawable/baseline_home_24"
+     android:title="Home" />
  <item
-     android:id="@+id/plan"
-     android:title="@string/Plan" />
+     android:id="@+id/dashboardFragment"
+     android:icon="@drawable/fav"
+     android:title="Favorites" />
  <item
-     android:id="@+id/none"
-     android:title="" />
- <item
-     android:id="@+id/fav"
-
-     android:title="@string/favorites" />
- <item
-     android:id="@+id/settings"
-
-     android:title="@string/settings" />
+     android:id="@+id/profileFragment"
+     android:icon="@drawable/plan"
+     android:title="Plans" />
 </menu>
