--- a/AndroidJava/app/src/main/res/layout/fragment_home.xml
+++ b/AndroidJava/app/src/main/res/layout/fragment_home.xml
@@ -89,5 +89,11 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             tools:listitem="@layout/meal_cell" />
+
+        <Button
+            android:id="@+id/signUpBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="sign Up" />
     </LinearLayout>
 </ScrollView>
