--- a/AndroidJava/app/src/main/res/navigation/nav_graph.xml
+++ b/AndroidJava/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/signUp2">
+    app:startDestination="@id/home2">
 
     <fragment
         android:id="@+id/home2"
@@ -16,6 +16,9 @@
         <action
             android:id="@+id/action_home2_to_mealsList"
             app:destination="@id/mealsList" />
+        <action
+            android:id="@+id/action_home2_to_searchFragment2"
+            app:destination="@id/searchFragment" />
     </fragment>
 
     <fragment
@@ -77,11 +80,7 @@
         android:name="com.example.androidjava.allpages.favorites.view.favoritesPage"
         android:label="fragment_favorites_page"
         tools:layout="@layout/fragment_favorites_page" />
-    <fragment
-        android:id="@+id/navBar"
-        android:name="com.example.androidjava.fragments.NavBar"
-        android:label="fragment_nav_bar"
-        tools:layout="@layout/fragment_nav_bar" />
+
     <fragment
         android:id="@+id/signUp2"
         android:name="com.example.androidjava.allpages.firebaseLoginAndSignUp.signUp.views.SignUp"
@@ -94,5 +93,18 @@
             android:id="@+id/action_signUp2_to_loginPage"
             app:destination="@id/loginPage" />
     </fragment>
+    <fragment
+        android:id="@+id/searchFragment"
+        android:name="com.example.androidjava.allpages.search.view.SearchFragment"
+        android:label="fragment_search"
+        tools:layout="@layout/fragment_search" >
+        <action
+            android:id="@+id/action_searchFragment_to_mealDetails"
+            app:destination="@id/mealDetails" />
+    </fragment>
+    <fragment
+        android:id="@+id/plansFragment"
+        android:name="com.example.androidjava.allpages.plan.view.plansFragment"
+        android:label="plansFragment" />
 
 </navigation>
