--- a/AndroidJava/app/src/main/res/layout/activity_main.xml
+++ b/AndroidJava/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         app:defaultNavHost="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/navigation_bar"
         app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/nav_graph" />
 
@@ -37,7 +38,7 @@
             android:gravity="center"
             android:weightSum="4">
 
-            <!-- أيقونة الصفحة الرئيسية -->
+
             <LinearLayout
                 android:id="@+id/nav_home"
                 android:layout_width="0dp"
@@ -64,7 +65,7 @@
                     android:textSize="12sp" />
             </LinearLayout>
 
-            <!-- أيقونة المفضلة -->
+
             <LinearLayout
                 android:id="@+id/nav_favorites"
                 android:layout_width="0dp"
