--- a/AndroidJava/app/src/main/res/layout/fragment_home.xml
+++ b/AndroidJava/app/src/main/res/layout/fragment_home.xml
@@ -8,15 +8,31 @@
     android:padding="16dp"
     tools:context=".allpages.home.views.Home">
 
-    <TextView
-        android:id="@+id/textView5"
-        style="@style/bigTxt"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/daily_inspiration"
-        android:textColor="@color/DarkGreen"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView5"
+            style="@style/bigTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/daily_inspiration"
+            android:textColor="@color/DarkGreen"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/leaveImg"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/logout"
+            />
+
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/randomMealContainer"
