--- a/AndroidJava/app/src/main/res/layout/ingredient_item.xml
+++ b/AndroidJava/app/src/main/res/layout/ingredient_item.xml
@@ -2,47 +2,53 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:padding="8dp">
 
+    <!-- CardView: Holds Image & Text -->
     <androidx.cardview.widget.CardView
-        android:layout_width="300dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_margin="5dp"
         app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="12dp"
-        app:cardElevation="4dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="6dp"
+        app:cardUseCompatPadding="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <!-- Inner LinearLayout for Alignment -->
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="130dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="12dp">
 
-            android:orientation="horizontal"
-            android:padding="10dp">
-
-
+            <!-- Ingredient Image -->
             <ImageView
                 android:id="@+id/ingredientImg"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_marginEnd="10dp"
-                android:contentDescription="imgOfItem"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:layout_gravity="center"
+                android:contentDescription="Ingredient Image"
+                android:scaleType="fitCenter"
                 app:srcCompat="@drawable/food" />
 
-
+            <!-- Ingredient Title -->
             <TextView
                 android:id="@+id/stepTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:fontFamily="monospace"
+                android:layout_marginTop="6dp"
+                android:fontFamily="sans-serif-medium"
+                android:gravity="center"
                 android:text="Ingredient Title"
+                android:textColor="@color/black"
                 android:textSize="14sp"
-                android:textStyle="bold" />
-
+                android:textStyle="normal" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
