--- a/AndroidJava/app/src/main/res/layout/meal_cell.xml
+++ b/AndroidJava/app/src/main/res/layout/meal_cell.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card"
     android:layout_width="220dp"
     android:layout_height="190dp"
     android:layout_margin="8dp"
     app:cardBackgroundColor="@color/Green"
-    app:cardCornerRadius="16dp"
-    app:cardElevation="7dp"
+    app:cardCornerRadius="20dp"
+    app:cardElevation="8dp"
     app:rippleColor="#6D6363"
     app:strokeColor="@color/SoftPink"
     app:strokeWidth="3dp">
@@ -15,18 +16,14 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
-        android:background="@color/Green"
-        android:backgroundTint="@color/Green">
+        android:background="@color/Green">
 
 
         <ImageView
             android:id="@+id/itemImg"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="?attr/colorSurfaceVariant"
             android:scaleType="centerCrop" />
-
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -34,51 +31,45 @@
             android:layout_alignParentBottom="true"
             android:alpha="0.92"
             android:background="@color/DarkGreen"
-            android:orientation="horizontal"
-            android:padding="16dp">
+            android:orientation="vertical"
+            android:padding="12dp">
 
-
-            <RelativeLayout
+            ]
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
+
                 <TextView
                     android:id="@+id/Title"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_marginRight="5dp"
                     android:ellipsize="end"
                     android:fontFamily="monospace"
-                    android:maxLines="2"
-                    android:textAppearance="?attr/textAppearanceHeadline5"
+                    android:maxLines="3"
                     android:textColor="@color/white"
                     android:textSize="15sp"
                     android:textStyle="bold"
-                    app:layout_constraintStart_toEndOf="@id/heartImg" />
+                    app:layout_constraintEnd_toStartOf="@id/heartImg"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
 
                 <ImageView
                     android:id="@+id/heartImg"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    app:srcCompat="@drawable/notfav" />
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="2dp"
+                    android:layout_marginTop="4dp"
+                    app:srcCompat="@drawable/notfav"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
 
-            </RelativeLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-            <TextView
-                android:id="@+id/desc"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="4dp"
-                android:alpha="0.8"
-                android:fontFamily="monospace"
-                android:textColor="@android:color/white"
-                android:textSize="14sp"
-                android:textStyle="bold" />
 
         </LinearLayout>
 
