--- a/AndroidJava/app/src/main/res/values/styles.xml
+++ b/AndroidJava/app/src/main/res/values/styles.xml
@@ -11,4 +11,12 @@
 
 
     </style>
+    <style name="RedDatePickerDialog" parent="Theme.MaterialComponents.Light.Dialog">
+        <item name="colorPrimary">@color/red</item>
+        <item name="colorAccent">@color/red</item>
+
+    </style>
+
+
+
 </resources>
