--- a/AndroidJava/app/src/main/res/layout/fragment_introduction.xml
+++ b/AndroidJava/app/src/main/res/layout/fragment_introduction.xml
@@ -24,8 +24,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_weight=".1"
+        android:fontFamily="monospace"
         android:gravity="center"
-        android:text="Foodienator"
+        android:text="@string/foodienator"
         android:textColor="@android:color/white"
         android:textSize="24sp"
         android:textStyle="bold" />
@@ -36,8 +37,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="0.09"
+        android:fontFamily="monospace"
         android:gravity="center"
-        android:text="Order your favorite meals here!"
+        android:text="@string/your_favorite_meals_here"
         android:textColor="#F8EFEF"
         android:textSize="14sp" />
 
@@ -80,5 +82,12 @@
             app:strokeColor="@color/DarkGreen"
             app:strokeWidth="1dp" />
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight=".3"
+        android:src="@drawable/logo" />
 
 </LinearLayout>
