--- a/AndroidJava/app/src/main/res/layout/meal_cell.xml
+++ b/AndroidJava/app/src/main/res/layout/meal_cell.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card"
     android:layout_width="220dp"
@@ -9,6 +8,7 @@
     app:cardBackgroundColor="@color/Green"
     app:cardCornerRadius="20dp"
     app:cardElevation="8dp"
+    app:cardUseCompatPadding="false"
     app:rippleColor="#6D6363"
     app:strokeColor="@color/SoftPink"
     app:strokeWidth="3dp">
@@ -35,6 +35,7 @@
             android:padding="12dp">
 
             ]
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -60,15 +61,14 @@
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:layout_marginStart="8dp"
-                    android:layout_marginEnd="2dp"
                     android:layout_marginTop="4dp"
-                    app:srcCompat="@drawable/notfav"
+                    android:layout_marginEnd="2dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+                    app:srcCompat="@drawable/notfav" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 
         </LinearLayout>
